# repo-to-prompt

./: main.py  pyproject.toml
